--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.1",
     "express": "^4.14.0",
     "mongodb": "^2.2.11",
+    "mongoose": "^4.6.8",
     "path": "^0.12.7"
   }
 }
